# net_con

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tiltignore  .tool-versions  AGENTS.md  Dockerfile  README.md  TODO.md  Tiltfile  deployment.tpl.yml  docker-bake.hcl  main.py  pyproject.toml  taskfile.yml
docs/: TILT.md
taskfiles/: bootstrap.yml  docker.yml  k8s.yml  kind.yml  tilt.yml  uv.yml
tests/: test_main.py
